objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AMS_Company_ID__c</fullName>
        <description>External Id created by Rabit</description>
        <label>AMS_Company_ID__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccTransferingID__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>AccTransferingID__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>caseextid__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>caseextid__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecfvbty123__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>ecfvbty123__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>exterforcase__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>exterforcase__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newExtIdforAcc__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>newExtIdforAcc__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newaccextid__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>newaccextid__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rvrevrev__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>rvrevrev__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>